--- a/JSF/GS_JSF_1/src/main/webapp/index.xhtml
+++ b/JSF/GS_JSF_1/src/main/webapp/index.xhtml
@@ -13,13 +13,13 @@
                <tr>
                   <td>Name:</td>
                   <td>
-                     <h:inputText value="#{user.name}"/>
+                     <h:inputText value="#{user.name}"/> <!--JSF tag for text input-->
                   </td>
                </tr>             
                <tr>
                   <td>Password:</td>
                   <td>
-                     <h:inputSecret value="#{user.password}"/>
+                     <h:inputSecret value="#{user.password}"/> <!--JSF tag for password input-->
                   </td>
                </tr>
             </table>
