JSF TEST new PC

--- a/JSF/GS_JSF_5/src/main/webapp/index.xhtml
+++ b/JSF/GS_JSF_5/src/main/webapp/index.xhtml
@@ -43,7 +43,7 @@
         <table>
             <tr>
                 <td>Name:</td>
-                <td><h:inputText id="name" label="name" required="true" value="#{controller.currentUser.name}"/>
+                <td><h:inputText id="name" label="name" required="true" value="#{controller.currentUser.name}"/> <!--if you whant that this field in your form will be required, use required="true"-->
                     <h:message for="name" style="color:red" />
                 </td>
             </tr>
