--- a/JSF/GS_JSF_6/src/main/webapp/input.xhtml
+++ b/JSF/GS_JSF_6/src/main/webapp/input.xhtml
@@ -82,7 +82,7 @@
 
         </h:form>
         <hr/>
-        <h:outputLink value="#" onclick="showMessage('test');">Test javascript</h:outputLink>
+        <h:outputLink value="#" onclick="showMessage('JavaScript is working');">Test javascript</h:outputLink>
 
     </h:body>
 </f:view>
