--- a/JSF/GS_JSF_8/src/main/webapp/index.xhtml
+++ b/JSF/GS_JSF_8/src/main/webapp/index.xhtml
@@ -36,7 +36,7 @@
 
         </div>
 
-        <h:outputLink value="index2.xhtml" >Override layout</h:outputLink>
+        <h:outputLink value="index2.xhtml" >Override layout</h:outputLink>  <!--reference for next page-->
 
     </h:body>
 </f:view>
