--- a/JSF/GS_JSF_8/src/main/webapp/index2.xhtml
+++ b/JSF/GS_JSF_8/src/main/webapp/index2.xhtml
@@ -14,9 +14,9 @@
 
     <h:body>
 
-        <ui:composition template="index.xhtml">
+        <ui:composition template="index.xhtml"> <!--It's mean: that we want create this page based of page index.xhtml-->
 
-            <ui:define name="content">
+            <ui:define name="content"> <!--It's look like we override page (div content and div footer will be override)-->
                 <h2>This is index2 content</h2>
             </ui:define>
 
